--- a/SMHET.tex
+++ b/SMHET.tex
@@ -6,11 +6,15 @@
 \usepackage{epsfig}
 \usepackage{multirow}
 \usepackage{color,soul}
-% Authors / affiliations
 
-\author{Noor Eldabagh}
-\affiliation{Department of Chemistry, William Paterson University, 300 Pompton Road, Wayne, NJ, 07470, USA}
+
+% Authors / affiliations
+% Authors in alphabetical order except for corresponding author (JJF), need 
+% to determine if this is the proper order and if we want to have co-first authors!
+
 \author{Jason Codrington}
+\affiliation{Department of Chemistry, William Paterson University, 300 Pompton Road, Wayne, NJ, 07470, USA}
+\author{Noor Eldabagh}
 \affiliation{Department of Chemistry, William Paterson University, 300 Pompton Road, Wayne, NJ, 07470, USA}
 \author{Kimberly Fernando}
 \affiliation{Department of Chemistry, William Paterson University, 300 Pompton Road, Wayne, NJ, 07470, USA}
