--- a/SMHET.tex
+++ b/SMHET.tex
@@ -59,6 +59,13 @@ illumination conditions.
 
 \section{Introduction}
 
+Various strategies that exploit the optical properties of metal nanoparticles, namely their ability to support localized surface plasmons resonances (LSPR, which are collective oscillations of their conduction electrons driven by visible light), have been explored recently with the aim of using low-intensity light to efficiently drive chemical reactions [12, 13].  The interest in this area has been motivated by the fact that metal nanoparticles (most prominently silver and gold) are exceptionally good absorbers of visible light, so they are ideal candidates for harvesting solar photons.  Importantly, the resonant properties of plasmonic particles are highly tunable by parameters under synthetic control like geometry, composition, surface chemistry, and the surrounding environment [14-17].  An emerging paradigm that exploits LSPR for photocatalysis is known as Plasmon-mediated Hot-Electron Transfer (PHET) [17].  There have been several exciting reports that attribute the photocatalysis of energetically demanding reactions to PHET.   This mechanism has been observed to drive the epoxidation of ethylene, a reaction important for the generation of coolants, using silver nanoparticles [18].  Additionally, this mechanism has been observed to lead to the reduction of copper oxide at the surface of copper nanoparticles [19] and reduction of iron oxide at the surface of gold-core iron-shell nanoparticles [20], both of which are important for maintaining the vitality of metal and/or metal oxide catalysts involved in a variety of chemical reactions.   The dissociation of hydrogen adsorbed to gold nanoparticles [21] has also been observed to proceed through PHET, which has implications for using carbon dioxide to create commodity chemicals and chemical fuels.  Importantly, PHET enables many of these reactions under low-light conditions (~1 to 3 suns), which has important implications for using solar energy to drive these reactions.  
+   In PHET, the collective plasmon excitation decays rapidly (on a ~10 femtosecond timescale) to a non-equilibrium distribution of energetic electron-hole pairs, or a so-called hot-electron distribution [12, 17].  Hot-electrons can deposit energy into reactive degrees of freedom of molecules adsorbed to the nanoparticle surface, thereby initiating chemical transformations.  Despite the considerable progress made in demonstrating the potential of the paradigm of PHET, its widespread application faces several challenges [17]. The intrinsic optical properties of noble metals that give rise to the extraordinarily large absorption cross sections associated with LSPR are also fundamentally related to the broad energy spectra and short lifetimes associated with LSPR and the subsequent hot-electron distributions [11]. This presents a fundamental challenge in terms of photocatalytic selectivity and efficiency.  That is, photocatalytic selectivity relies on the ability to precisely activate a reactive degree of freedom of the adsorbate molecule by precisely matching the energy of the carrier with the energy of the desired degree of freedom. Furthermore, the timescale of hot-electron relaxation competes with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer.  Finally, the most promising candidates for SPR-mediated photochemistry the noble metals; ideally, more abundant and cost-effective materials should be sought for wide-scale applications.
+Considering this, an incredible opportunity exists to identify new classes of structures for mediating light-matter interactions and energy transfer events that offer the same advantages as metal nanoparticles, namely exceptional light-harvesting potential, while also offering greater selectivity and efficiency in energy transfer.  Ideally, such structures could be made mostly, if not entirely, from earth-abundant and cost-effective materials.  
+Working with collaborators with expertise in nanoparticle synthesis at Argonne National Laboratory and Temple University, we have recently observed photocatalysis under simulated sunlight and room-temperature conditions mediated by a class of hierarchical nanostructures that consists of a large (r~200 nm) dielectric nanosphere decorated with small (r~2nm) platinum nanoparticles [22].  Preliminary theoretical analysis, conducted by several students at William Paterson University and me, has motivated the hypothesis that an entirely new photocatalytic mechanism is enabled by direct coupling between light concentrated by scattering resonances supported by the dielectric sphere to hot-electron excitation in the platinum particles.  We call this putative mechanism Scattering-Mediated Hot Electron Transfer, or SMHET (pronounced smεt), and we illustrate it schematically in Figure 1 b.  The critical difference between the putative SMHET mechanism and PHET is that resonant light harvesting in SMHET is enabled by the scattering properties of a dielectric nanostructure, and should be largely independent of the resonant properties of metal nanostructure(s) involved.  The requirement of the metal is simply that it absorbs light at the frequency of the dielectric scattering resonance.  Because metals are generally broad visible absorbers, and because the scattering resonance of dielectric nanospheres can be tuned across the visible spectrum, this requirement should be satisfied by a wide variety of metals. 
+Importantly, the proposed SMHET mechanism entirely circumvents LSPR excitation, which presents multiple benefits.  First, unlike LSPR, scattering resonances in dielectric nanoparticles can be tuned to be extremely narrow in energy; that is, quality factors in dielectric scattering resonances can be orders of magnitude larger than LSPR quality factors [23].  We hypothesize that this can be a boon to selectivity in the energy distribution of directly excited hot-electrons, which will translate into enhanced photocatalytic selectivity.  Second, scattering resonances in dielectric nanoparticles can be tuned to have much longer lifetimes than LSPR, and we hypothesize that hot-electrons excited by the electric nearfield associated with these long-lived resonances will themselves have longer lifetimes, which will enhance hot-electron transfer efficiencies.  Finally, because resonant light-harvesting depends critically on the properties of the dielectric nanostructure, and is expected to be largely independent of the resonant or plasmonic properties of the metal nanoparticle(s) involved, this should open the possibility of realizing SMHET with a variety of cheap and earth-abundant materials.   
+Petroleum derived polymers like polycarbonate, polystyrene, and poly methyl methacrylate are ideal materials for these dielectric core structures because they (1) can be used to fabricate highly monodisperse nanospheres in the desired size range (100s of nanometers), (2) have moderately large refractive indices (n>=1.45), (3) have surfaces that can be functionalized in a variety of ways (including for facilitating surface chemistry, cellular uptake and biocompatibility), and (4), are abundant and cost-effective materials [24-29].  Further understanding of the mechanism of photocatalysis in these structures, including verification of the putative SMHET mechanism, could have important implications for the variety of applications currently being investigated using PHET, including solar energy conversion, photocatalysis, photodynamic therapy, and advanced chemical 
+
 %% From recent Nordlander paper about "Dirty Plasmons"
 %etallic nanoparticles with strong optically resonant properties behave as nanoscale optical antennas, and have recently shown extraordinary promise as light-driven catalysts. Traditionally, however, heterogeneous catalysis has relied upon weakly light-absorbing metals such as Pd, Pt, Ru, or Rh to lower the activation energy for chemical reactions. Here we show that coupling a plasmonic nanoantenna directly to catalytic nanoparticles enables the light-induced generation of hot carriers within the catalyst nanoparticles, transforming the entire complex into an efficient light-controlled reactive catalyst. In Pd-decorated Al nanocrystals, photocatalytic hydrogen desorption closely follows the antenna-induced local absorption cross-section of the Pd islands, and a supralinear power dependence strongly suggests that hot-carrier-induced desorption occurs at the Pd island surface. When acetylene is present along with hydrogen, the selectivity for photocatalytic ethylene production relative to ethane is strongly enhanced, approaching 40:1. These observations indicate that antenna−reactor complexes may greatly expand possibilities for developing designer photocatalytic substrates.
 
