--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -77,7 +77,7 @@ illumination conditions.
 %%\end{document}
 
 \section{Introduction}
-
+%%% Need something about temporal control of fields up top!
 Various strategies that exploit the optical properties of metal nanoparticles, namely their ability to support localized surface plasmons resonances (LSPR, which are collective oscillations of their 
 conduction electrons driven by visible light), have been explored recently with the aim of using low-intensity light to efficiently drive chemical reactions [12, 13].  The interest in this area has 
 been motivated partly by the fact that metal nanoparticles (most prominently silver and gold) are exceptionally good absorbers of visible light, so they are ideal candidates for harvesting solar photons.  
@@ -106,15 +106,30 @@ nanostructures that effectively delegate the light-harvesting and catalytic func
 demonstrated an antenna-reactor concept that levarages the nearfield enhancement from aluminum plasmons to generate energetic carriers on 
 paladium islands and showed the efficacy of this strategy for the photcatalytic transformation of acetylene to ethyelen.  
 Two of the current authors, along with Sun and co-workers, demonstrated a phenomena known as scattering-mediated absorption where dielectric
-scattering resonances in SiO$_2$ nanospheres were utlized to induce resonant absorption in non-plasmonic platinum nanoparticles in SiO$_2$/Pt nanohybrids~\cite{Sun_NaturePhoton}.
-The scattering-mediated absorption (SMA) phenomena was also observed to induce highly selective photocatalytic oxidation of benzyl alcohol to benzaldehyde~\cite{Sun_NaturePhoton}.
-Zhang {\it et al} indendently described a SMA phenomenon in Au-TiO$_2$ nanohybrids that leveraged so-called whispering gallery modes to 
-enhance plasmonic and non-plasmonic absorption in gold nanoparticles, and demonstrated these structures efficacy for photocatalytic water splitting~\cite{Zhang_ACSNano}.
-Interestingly, hot-carrier transfer was implicated in the photocatalytic mechanism that resulted from the SMA phenomena.
-The prospect of using SMA in hybrid dielectric/metal nanostructures to initiate hot-carrier generation and transfer is particularly 
-compelling as it could completely circumvent plasmon excitation.  Not only does this open up possibilities to utilize a broader palette of materials, it also
-presents the possibility of realizing unique photocatalytic pathways owing to differences in the distributions and dynamics of energetic carriers produced by SMA compared
-to those produced by plasmon excitation.    
+scattering resonances in SiO$_2$ nanospheres were utlized to induce resonant absorption in 
+non-plasmonic platinum nanoparticles in SiO$_2$/Pt nanohybrids~\cite{Sun_NaturePhoton}.
+The scattering-mediated absorption (SMA) phenomena was also observed to induce highly selective 
+photocatalytic oxidation of benzyl alcohol to benzaldehyde~\cite{Sun_NaturePhoton}.
+Zhang {\it et al} indendently described a SMA phenomenon in Au-TiO$_2$ nanohybrids that leveraged 
+so-called whispering gallery modes to 
+enhance plasmonic and non-plasmonic absorption in gold nanoparticles, and demonstrated these 
+structures efficacy for photocatalytic water splitting~\cite{Zhang_ACSNano}.
+Interestingly, hot-carrier transfer was implicated in the photocatalytic mechanism that 
+resulted from the SMA phenomena.
+The prospect of using SMA in hybrid dielectric/metal nanostructures to initiate hot-carrier 
+generation and transfer is particularly 
+compelling as it could completely circumvent plasmon excitation.  Not only does this open 
+up possibilities to utilize a broader palette of materials, it also
+presents the possibility of realizing unique photocatalytic pathways owing to differences 
+in the distributions and dynamics of energetic carriers produced by SMA compared
+to those produced by plasmon excitation.
+The push to identify novel structures for mediating hot-carrier generation and transfer has been paralleled by 
+efforts to develop theoretical methodologies to elucidate these processes.  Govorov and co-workers developed a theory of 
+hot-electron generation within the framework of time-dependent perturbation theory of non-interacting electron gasses
+confined by infinite potentials, and elucidated a variety of shape- and size-dependent factors for optimizing 
+the hot-carrier generation.  A similar approach was also persued by SCIENTIFIC REPORTS ON NANORODS to analyzie hot-electron
+generation in nanorods.  JAVIER and co-workers recently described a quantum master equation approach to studying the decay 
+dynamics of hot-carriers in 
 
 In this work, we take a first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
 dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
