--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -124,7 +124,11 @@ presents the possibility of realizing unique photocatalytic pathways owing to di
 in the distributions and dynamics of energetic carriers produced by SMA compared
 to those produced by plasmon excitation.
 The push to identify novel structures for mediating hot-carrier generation and transfer has been paralleled by 
-efforts to develop theoretical methodologies to elucidate these processes.  Govorov and co-workers developed a theory of 
+efforts to develop theoretical methodologies to elucidate these processes.  The underlying electronic
+structure has been treated both within free-electron models confined by potential wells~\cite{all_the_PIW_papers} (here called
+"particle-in-a-well (PIW) models), and by {\it ab initio} approaches~\cite{all_the_dft_papers}.
+
+Govorov and co-workers developed a theory of 
 hot-electron generation within the framework of time-dependent perturbation theory of non-interacting electron gasses
 confined by infinite potentials, and elucidated a variety of shape- and size-dependent factors for optimizing 
 the hot-carrier generation.  A similar approach was also persued by SCIENTIFIC REPORTS ON NANORODS to analyzie hot-electron
