--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -127,13 +127,16 @@ The push to identify novel structures for mediating hot-carrier generation and t
 efforts to develop theoretical methodologies to elucidate these processes.  The underlying electronic
 structure has been treated both within free-electron models confined by potential wells~\cite{all_the_PIW_papers} (here called
 "particle-in-a-well (PIW) models), and by {\it ab initio} approaches~\cite{all_the_dft_papers}.
-
-Govorov and co-workers developed a theory of 
-hot-electron generation within the framework of time-dependent perturbation theory of non-interacting electron gasses
-confined by infinite potentials, and elucidated a variety of shape- and size-dependent factors for optimizing 
-the hot-carrier generation.  A similar approach was also persued by SCIENTIFIC REPORTS ON NANORODS to analyzie hot-electron
-generation in nanorods.  JAVIER and co-workers recently described a quantum master equation approach to studying the decay 
-dynamics of hot-carriers in 
+Using PIW models, Govorov and co-workers developed a theory of 
+hot-electron generation within the framework of time-dependent perturbation theory that
+has elucidated a variety of shape- and size-dependent factors for optimizing 
+the hot-carrier generation.  A similar approach was also persued by SCIENTIFIC REPORTS ON NANORODS suggesting
+that nanorods are exceptionally good structures for hot-carrier generation.  JAVIER and co-workers recently described a 
+quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
+hot-carrier excitation and decay dynamics.  The utilization of {\it ab initio} approaches by Louie and co-workers, 
+and by Atwater {\it et al}, has also provided valuable insights into the role that a metals bandstructure plays
+in determining the efficiency of hot-carrier generation, and particularly in the assymetry between hot-electron
+and hot-hole generation.
 
 In this work, we take a first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
 dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
