--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -131,13 +131,17 @@ Using PIW models, Govorov and co-workers developed a theory of
 hot-electron generation within the framework of time-dependent perturbation theory that
 has elucidated a variety of shape- and size-dependent factors for optimizing 
 the hot-carrier generation.  A similar approach was also persued by SCIENTIFIC REPORTS ON NANORODS suggesting
-that nanorods are exceptionally good structures for hot-carrier generation.  JAVIER and co-workers recently described a 
+that nanorods are exceptionally good structures for hot-carrier generation.  Garcia de Abajo and co-workers recently described a 
 quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
-hot-carrier excitation and decay dynamics.  The utilization of {\it ab initio} approaches by Louie and co-workers, 
-and by Atwater {\it et al}, has also provided valuable insights into the role that a metals bandstructure plays
+hot-carrier excitation and decay dynamics.  The utilization of {\it ab initio} approaches by Sundararaman {\it et al} 
+has also provided valuable insights into the role that a metals bandstructure plays
 in determining the efficiency of hot-carrier generation, and particularly in the assymetry between hot-electron
-and hot-hole generation.
+and hot-hole generation.  Nordlander and co-workers have directly compared free-electron and {\it ab initio} approaches
+and found negligible impact on hot-carrier generation and dynamics in Ag nanospheres resulting from electron correlation, 
+though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot-carrier dynamics resulting
+from surface plasmon polaritons in gold and silver.
 
+In 
 In this work, we take a first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
 dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
 for simulating the electronic dynamics driven by arbitrary time-domain electromagnetic fields.  We find that the populations
