--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -141,8 +141,7 @@ and found negligible impact on hot-carrier generation and dynamics in Ag nanosph
 though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot-carrier dynamics resulting
 from surface plasmon polaritons in gold and silver.
 
-In 
-In this work, we take a first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
+We develop an approach based on evolving the many first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
 dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
 for simulating the electronic dynamics driven by arbitrary time-domain electromagnetic fields.  We find that the populations
 and dynamics of hot carriers derived from SMA can be tuned through simple
