--- a/SMHET_BUP.tex
+++ b/SMHET_BUP.tex
@@ -141,7 +141,11 @@ and found negligible impact on hot-carrier generation and dynamics in Ag nanosph
 though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot-carrier dynamics resulting
 from surface plasmon polaritons in gold and silver.
 
-We develop an approach based on evolving the many first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
+We develop an novel approach for studying hot-carrier dynamics that may arise from arbitrary electromagnetic
+fields, including the unique nearfields that arise from SMA on hybrid dielectric-metal nanoparticles and plasmon resonance
+on noble metal nanoparticles.  Our approach 
+
+many first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
 dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
 for simulating the electronic dynamics driven by arbitrary time-domain electromagnetic fields.  We find that the populations
 and dynamics of hot carriers derived from SMA can be tuned through simple
