New figures in the paper, FDTD details in SI

--- a/SMHET.bib
+++ b/SMHET.bib
@@ -5,7 +5,7 @@
 
 %%%%%%%%%%  THEORY PAPERS
 @article{SAG_ACSPhotonics_2016,
-author = {J. R. M. Saavedra and Ana Asenjo-Garcia and F. Javier García de Abajo},
+author = {J. R. M. Saavedra and Ana Asenjo-Garcia and { Garc\'ia de Abajo}, F. J.},
 title = {Hot-Electron Dynamics and Thermalization in Small Metallic Nanoparticles},
 journal = {ACS Photonics},
 volume = {0},
